# aqua-blue-benchmark

./: README.md  annealer.html  bar.html  foo.html  index.html  pyproject.toml  test_lib.py
.github/workflows/: workflow.yml
aqua_blue_benchmark/: __init__.py  annealer.py  benchmark.py
benchmarks/: mackey-glass.py
benchmarks/kuramoto-shivasinsky/: approx.py
benchmarks/lorenz/: lorenz.py  lorenz_optimization.py
benchmarks/mackey-glass/: mackey-glass.py
examples/: matrix_multiplication.py  singular_values.py
