[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqua-blue-benchmark"
dynamic = ["version"]
description = "Benchmarking package for aqua-blue!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
author = { name = "Jane Doe", email = "jane.doe@chicagoclubteam.org" }
keywords = [
    "Lorem",
    "ipsum",
    "dolor",
    "sit",
    "amet"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy ~= 2.0.2",
    "tabulate~=0.9.0"
]

[project.urls]
Homepage = "https://github.com/Chicago-Club-Management-Company/aqua-blue-benchmark"

[project.optional-dependencies]
dev = [
    "hatchling~=1.27.0",
    "pytest~=8.0.2",
    "ruff~=0.9.4",
    "mypy~=1.13.0",
    "pdoc3~=0.11.5"
]
benchmarks = [ 
    "matplotlib~=3.9.4", 
    "reservoirpy~=0.3.12",
    "aqua-blue~=0.1.7",
]

[tool.hatch.version]
path = "aqua_blue_benchmark/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/aqua_blue_benchmark",
]
